Page updated: risk WT project added. New blog post.

--- a/about.qmd
+++ b/about.qmd
@@ -18,7 +18,7 @@ Going forward with a stochastic thinking in an organisation with a lack of stati
 
 #### Google
 
-[Professional Certificate in Project Management, 2025](https://www.coursera.org/account/accomplishments/specialization/certificate/4DMGH7CBK36A "go to certificate ")
+[Professional Certificate in Project Management, 2025](https://www.coursera.org/account/accomplishments/specialization/certificate/4DMGH7CBK36A "go to certificate")
 
 #### IBM
 
@@ -50,11 +50,11 @@ Introduction to Machine Learning Free Course, 2017 (Sebastian Thrun & Katie Malo
 
 #### University of Nottingham
 
-MSc. Electrical Technology for Sustainable and Renewable Energy Systems, UK (2010-2011)
+MSc. Electrical Technology for Sustainable and Renewable Energy Systems, UK (2011)
 
 #### Universidad del Zulia
 
-Dipl.-Ing. Electrical Engineering, VE (2000-2006)
+Dipl.-Ing. Electrical Engineering, VE (2006)
 
 ## Languages
 
