--- a/index.qmd
+++ b/index.qmd
@@ -12,7 +12,7 @@ about:
     links:
     - icon: linkedin
       # text: LinkedIn
-      href: https://www.linkedin.com/in/jorge-thomas-ba751b8/
+      href: https://www.linkedin.com/in/jorge-a-thomas/
     - icon: github
       # text: Github
       href: https://github.com/jorgethomasm
